<resources>
    <string name="app_name">Check it</string>

    <string name="navigation_drawer_open">打开导航栏</string>
    <string name="navigation_drawer_close">关闭导航栏</string>

    <!--For All Activity-->
    <string name="global_back">返回</string>
    <string name="global_operation_failed">操作失败</string>

    <!--login and register-->
    <string name="login_activity_title">登录</string>
    <string name="login_username_label">用户名</string>
    <string name="login_password_label">密码</string>
    <string name="login_re_password_label">确认密码</string>
    <string name="register_activity_title">注册</string>
    <string name="login_btn_direct_use">跳过登录</string>
    <string name="confirm_direct_use">不登录则无法使用云同步服务，确认继续？</string>

    <string name="no_null_username">用户名不能为空</string>
    <string name="no_null_password">密码不能为空</string>
    <string name="no_null_re_password">重复密码不能为空</string>
    <string name="not_fit_password">两次密码不一致</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="register_error">用户名重复，注册失败</string>


    <!--nav titles-->
    <string name="nav_inbox_title">收集箱</string>
    <string name="nav_projects_title">项目</string>
    <string name="nav_daily_title">日常</string>
    <string name="nav_forecast_title">预测</string>
    <string name="nav_system_group_title">系统</string>
    <string name="nav_settings_title">设置</string>
    <string name="nav_about_title">关于</string>

    <!--inbox menu item titles-->
    <string name="inbox_menu_item">筛选</string>
    <string name="delete_all_item">删除全部</string>
    <string name="delete_all_finished">删除已完成</string>
    <string name="pull_from_server">同步服务端</string>

    <!--inbox item edit-->
    <string name="inbox_edit_title">编辑</string>
    <string name="delete_confirm">确认删除？</string>
    <string name="content_label">内容</string>
    <string name="inbox_deadline">截止日期</string>

    <!--projects item swipe menu-->
    <string name="projects_swipe_delete">删除</string>
    <string name="projects_swipe_edit">编辑</string>

    <!--projects activity-->
    <string name="project_new_title">新建项目</string>
    <string name="project_edit_title">编辑</string>
    <string name="project_content_hint">项目内容</string>
    <string name="project_type_label">类型</string>
    <string name="project_type_parallel">平行</string>
    <string name="project_type_sequence">顺序</string>
    <string name="project_type_single">单个动作</string>
    <string name="btn_flag">标记</string>
    <string name="no_null_project_content">内容不能为空</string>

    <!--actions activity-->
    <string name="action_content_hint">动作内容</string>
    <string name="action_new_title">新建动作</string>
    <string name="action_edit_title">编辑</string>

    <!--action activity-->
    <string name="actions_activity_title">动作</string>

    <!--forecast activity-->
    <string name="forecast_before">过去</string>
    <string name="forecast_today">今天</string>
    <string name="forecast_future">将来</string>
    <string name="forecast_mon">周一</string>
    <string name="forecast_tues">周二</string>
    <string name="forecast_wed">周三</string>
    <string name="forecast_thur">周四</string>
    <string name="forecast_fri">周五</string>
    <string name="forecast_sat">周六</string>
    <string name="forecast_sun">周日</string>
    <string name="forecast_deadline">截止</string>
    <string name="forecast_inbox">收集箱项</string>
    <string name="forecast_project">项目</string>
    <string name="forecast_action">动作</string>
    <string name="forecast_temp_date">2018–11–11 12:12</string>

    <!--settings activity-->
    <string name="settings_nickname_tip">昵称</string>
    <string name="settings_height_tip">身高(米)</string>
    <string name="settings_weight_tip">体重(千克)</string>
    <string name="settings_sport_tip">运动目标(卡路里)</string>
    <string name="settings_btn_logout">退出登录</string>
    <string name="settings_btn_sync">同步</string>
    <string name="settings_btn_confirm_edit">确认修改</string>
    <string name="settings_incorrect_input">输入信息不合法</string>
    <string name="settings_edit_failed">修改失败</string>
    <string name="settings_edit_success">修改成功</string>
    <string name="settings_msg_logout">可能丢失未同步的数据，确认退出登录？</string>
    <string name="settings_start_sync">开始同步</string>
    <string name="settings_end_sync">同步成功</string>

    <!--daily activity-->
    <string name="user_message_incomplete">用户信息不完整，这将影响部分功能的正常运行</string>
    <string name="daily_content_hint">日常提醒</string>
    <string name="daily_progress">健身进度</string>

</resources>
